# BulletPhysicsGodot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
project/: main.gd  main.tscn  project.godot
src/: BPPhysicsWorld.cpp  BPPhysicsWorld.h  BPProjectile.cpp  BPProjectile.h  GodotRigidBody.cpp  GodotRigidBody.h  register_types.cpp  register_types.h
src/environments/: BPAtmosphere.h  BPEnvironment.h  BPGeographic.h  BPHumidity.h  BPWind.h
src/forces/: BPCoriolis.h  BPDrag.h  BPForce.h  BPGravity.h  BPLift.h  BPMagnus.h
